--- a/LotusProject/Views/Store/ViewProduct.cshtml
+++ b/LotusProject/Views/Store/ViewProduct.cshtml
@@ -35,13 +35,28 @@
         </div>
     </div>
 
-    <div class="ui placeholder segment" style="width: 600px">
+    <div class="avl">
+
         <div class="ui icon header">
-            <i class="star outline icon" style="color: yellow"></i>
-            <i class="star outline icon" style="color: yellow"></i>
-            <i class="star outline icon" style="color: yellow"></i>
-            <i class="star outline icon" style="color: yellow"></i>
-            <i class="star outline icon" style="color: yellow"></i>
+            <i class="mini star outline icon" style="color: yellow"></i>
+        </div>
+        <div class="ui icon header">
+            <i class="mini star outline icon" style="color: yellow"></i>
+        </div>
+        <div class="ui icon header">
+            <i class="mini star outline icon" style="color: yellow"></i>
+        </div>
+        <div class="ui icon header">
+            <i class="mini star outline icon" style="color: yellow"></i>
+        </div>
+        <div class="ui icon header">
+            <i class="mini star outline icon" style="color: yellow"></i>
+        </div>
+        <div class="ui icon header">
+            <p>(0)</p>
+        </div>
+        <div class="ui icon header">
+            <i class="mini question circle outline icon"></i>
         </div>
     </div>
 
