--- a/LotusProject/Views/Store/ViewProduct.cshtml
+++ b/LotusProject/Views/Store/ViewProduct.cshtml
@@ -58,6 +58,12 @@
         <div class="ui icon header">
             <i class="mini question circle outline icon"></i>
         </div>
+        <div class="ui icon header">
+            <p>Perguntas</p>
+        </div>
+        <div class="ui icon header">
+            <h1>00,00</h1>
+        </div>
     </div>
 
 </div>
