--- a/LotusProject/Views/Employee/Employees.cshtml
+++ b/LotusProject/Views/Employee/Employees.cshtml
@@ -1,19 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Funcionários";
+    ViewBag.Title = "Employees";
     Layout = "~/Views/Shared/_LayoutEmployee.cshtml";
 }
-@*<head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.js"></script>
-    <link rel="stylesheet" href="~/static/css/StyleLoginCustomer.css">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-   
-</head>*@
-
 
 <div class="card text-center" style="background-color: #233240;">
     <div class="card-header">
@@ -29,8 +18,8 @@
 </div>
 
 <div class="row" style="padding-top: 10px; padding-left: 10px; padding-right: 10px">
-    
-      
+
+
     <div class="row">
         <div class="col-md-3" style="padding-top: 10px; ">
             <div class="ui card" style="background-color: #233240; border-color: #2A435B;">
@@ -121,4 +110,4 @@
     </div>
 
 </div>
-       
+
