--- a/LotusProject/Views/Shared/_LayoutEmployee.cshtml
+++ b/LotusProject/Views/Shared/_LayoutEmployee.cshtml
@@ -1,21 +1,18 @@
-﻿@{
-    LotusProject.Models.Employee EmpBag = (ViewBag.Employee != null) ? ViewBag.Employee : new LotusProject.Models.Employee();
- }
-
+﻿
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-   
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.js"></script>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.css" rel="stylesheet" />
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-   
+    @Scripts.Render("~/bundles/modernizr")
 
     <link rel="stylesheet" href="~/static/css/styleLayoutAdm.css">
     <title>@ViewBag.Title - Funcionários</title>
@@ -56,7 +53,7 @@
                 </a>
             </li>
             <li>
-                <a href="~/Employee/EmployeeCenter">
+                <a href="~/Employee/Employees">
                     <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
                     <span class="title">Funcionários</span>
                 </a>
@@ -81,7 +78,7 @@
 
     <div class="main">
         <div class="topbar">
-            
+
 
             <div class="title-page">
                 <p>@ViewBag.Title</p>
@@ -92,7 +89,7 @@
             </div>
         </div>
         <div class="content-main">
-        @RenderBody()
+            @RenderBody()
         </div>
 
         <footer>
@@ -107,7 +104,11 @@
             </div>
         </footer>
     </div>
-  
+
+    @{
+        LotusProject.Models.Employee EmpBag = (ViewBag.Employee != null) ? ViewBag.Employee : new LotusProject.Models.Employee();
+    }
+
 
 
 
