--- a/LotusProject/Views/Home/Home.cshtml
+++ b/LotusProject/Views/Home/Home.cshtml
@@ -16,17 +16,13 @@
     </div>
     <div class="row row-cust">
 
-        <div class="col-md-2 left-side">
+        <div class="col-md-2 center-content" style="padding-top: 15px">
             <div class="btnreserva">
                 <a href="~/Reservation/Reservation" class="ui inverted violet button rounded-pill" style="width:170px">Fazer reserva</a>
             </div>
         </div>
 
-        <div class="col-md-2 right-side">
-            <div class="btnreserva">
-                <a href="~/Store/MainStore" class="ui inverted violet button rounded-pill" style="width:170px">Acesso a loja</a>
-            </div>
-        </div>
+       
     </div>
 </div>
 
