--- a/LotusProject/Views/Shared/_Layout.cshtml
+++ b/LotusProject/Views/Shared/_Layout.cshtml
@@ -38,10 +38,10 @@
                     <a class="nav-link menu-font" href="@Url.Action( "Home", "Home")">Início</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link menu-font" href="@Url.Action( "InitialPage", "Home")">Reserva</a>
+                    <a class="nav-link menu-font" href="@Url.Action( "Reservation", "Reservation")">Reserva</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link menu-font" href="@Url.Action( "KnowUs", "Home")">Contato</a>
+                    <a class="nav-link menu-font" href="@Url.Action( "About", "Home")">Contato</a>
                 </li>
 
 
